--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Selectors Exercise</title>
-  <link rel="stylesheet" type="text/css" href="selectors.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <h1>Selectors Exercise</h1>
